--- a/experiments/prepare_data.ipynb
+++ b/experiments/prepare_data.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Execute the code from \"Execute from here\""
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,9 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -333,15 +338,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Execute from here"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -443,13 +448,13 @@
        "4  VDSXZXJEWIWBCG-UHFFFAOYSA-N  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_table('../data/chembl_24_chemreps.txt')\n",
+    "df = pd.read_table('../../data_transformers/chembl_24_1_chemreps.txt')\n",
     "L = len(df)\n",
     "print(L)\n",
     "df.head()"
@@ -457,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -483,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +562,7 @@
        "8  CHEMBL503870  C[C@H](NC(=O)OCc1ccccc1)C(=O)N[C@@H](C)C(=O)NN..."
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +581,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_dropped.to_csv('../data/chembl_24.csv', index=False)"
+    "# df_dropped.to_csv('../data/chembl_24.csv', index=False)"
    ]
   },
   {
@@ -599,7 +604,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smiles = df['canonical_smiles'].values\n",
+    "# smiles = df['canonical_smiles'].values\n",
     "\n",
     "# words = ['Cl', 'Br', 'At', 'Se', 'As', 'Si', 'Be', 'Ca', 'Mg', 'Li', 'Na', 'P+', 'O-', 'S-', 'Se-', 'N+', 'As+', 'Na+', 'Li+', 'H+',\\\n",
     "#         'K+', 'F-', 'Cl-', 'Br-', 'I-']\n",
@@ -615,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +743,7 @@
        "4  Br c 1 c c c c ( N c 2 n c n c 3 c c n c c 2 3...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -773,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -862,7 +867,7 @@
        "8  C [ C @ H ] ( N C ( = O ) O C c 1 c c c c c 1 ...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,11 +882,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_dropped.to_csv('data/chembl_24.csv')"
+    "df_dropped.to_csv('../../data_transformers/chembl_24.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stop executing the code from here."
    ]
   },
   {
@@ -1266,7 +1278,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1280,9 +1292,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
